mvc has been done.

--- a/eSale/Views/Order/UpdateOrder.cshtml
+++ b/eSale/Views/Order/UpdateOrder.cshtml
@@ -211,7 +211,7 @@
                 sum += $('.Qty').eq(i).val() * $('.UnitPrice').eq(i).val();
             }
             $("#total").html(sum);
-            //console.log(sum);
+            //console.log(sum+"rrr");
         }
 
     </script>
